<resources>
    <string name="app_name">YouTube_6</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="loading">Loading</string>
    <string name="playlist_in_item_image">playlist</string>
    <string name="default_playlist_name">Playlist name</string>
    <string name="_number_video_series">0 video series</string>
    <string name="btn_back">Back</string>
    <string name="playlist">Playlist</string>
    <string name="description">Description</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="video_series">\t video series</string>
    <string name="_04_00">04:00</string>
    <string name="video">Video</string>
    <string name="download">Download</string>
    <string name="select_video_quality">Select video quality</string>
    <string name="_1080p">1080p</string>
    <string name="_720p">720p</string>
    <string name="_480p">480p</string>
</resources>