<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_main">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_video_quality"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_1080p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                android:text="@string/_1080p"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp"
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:theme="@style/Theme.AppCompat.DayNight.Dialog.Alert.Custom" />

            <RadioButton
                android:id="@+id/rb_720p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                android:text="@string/_720p"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp"
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:theme="@style/Theme.AppCompat.DayNight.Dialog.Alert.Custom" />

            <RadioButton
                android:id="@+id/rb_480p"
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                android:text="@string/_480p"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_16sp"
                android:theme="@style/Theme.AppCompat.DayNight.Dialog.Alert.Custom" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/download"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_4dp_corner_Radius" />
    </LinearLayout>

</androidx.cardview.widget.CardView>